MyProject/force-app/main/default/objects/Consultant_Consultant__c/Consultant_Consultant__c.object-meta.xml
<CustomObject>
    <label>Consultant - Consultant</label>
    <nameField>
        <label>Consultant - Consultant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultant - Consultant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>